--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
-{ 
-    "name": "ignews",
-    "private": true,
-    "version": "0.1.0",
- 
+{
+  "name": "ignews",
+  "private": true,
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.0.9",
+    "next-auth": "^4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
