--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "faunadb": "^4.4.2",
     "next": "12.0.9",
     "next-auth": "^4.1.2",
